# yesand

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: release.yml  test.yml  version.yml
api/: api.py  schema.py
config/: asgi.py  settings.py  urls.py  wsgi.py
data/: prompt_db.db
static/css/: custom.css
yesand/: admin.py  apps.py  forms.py  models.py  tests.py  views.py
yesand/management/commands/: add_default_dir.py
yesand/migrations/: 0001_initial.py
yesand/templates/: base.html  breadcrumb.html  filesystem.html  index.html  projects.html  prompt.html  welcome.html
yesand/templates/ai/: add.html  card.html  copy.html  delete.html  dropdown.html  edit.html  move.html
yesand/templates/dir/: add.html  copy.html  dir.html
yesand/templates/dirnode/: content.html  dropdown.html
yesand/templates/modal/: add.html  base.html  copy.html  delete.html  dropdown.html  move.html  rename.html
yesand/templates/modals/: add_dir.html  add_prompt.html  copy_dir.html  copy_prompt.html  delete_dir.html  delete_prompt.html  load_modals.html  move_dir.html  move_prompt.html  rename_dir.html
yesand/templates/prompt/: add.html  card.html  copy.html  dropdown.html  edit.html  prompt.html
yesand/templatetags/: custom_filters.py
